--- a/default.html
+++ b/default.html
@@ -161,14 +161,14 @@
                         <tr>
                             <td bgcolor="#000000" align="center" style="padding: 70px 30px 30px; background-color: #000000 !important;">
                                 <a href="#">
-                                    <img src="https://sash-257defi.github.io/sbpm-media/sellbuyplay-logo.png" width="300" height="47" border="0" style="display: block;" alt="SellBuyPlay">
+                                    <img src="https://sash-257defi.github.io/sbpm-media/sbp-logo.png" width="200" height="47" border="0" style="display: block;" alt="SellBuyPlay">
                                 </a>
-                                <p style="padding: 60px 3% 0px;margin: 0px 20px -20px!important;font-family: 'IBM Plex Sans', Arial, sans-serif; font-size: 16px; color: #ffffff;">Hello [user name]</p>
-                                <p style="padding-left: 3%; padding-right: 3%; font-family: 'IBM Plex Sans', Arial, sans-serif; font-size: 32px; line-height: 1.25 ; color: #ffffff; font-weight: 600;">Welcome to SellBuyPlay Community!</p>
+                                <p style="padding: 60px 3% 0px;margin: 0px 20px 20px!important;font-family: 'IBM Plex Sans', Arial, sans-serif; font-size: 16px; color: #ffffff;">Hello [user name]</p>
+                                <p style="padding-left: 3%; padding-right: 3%; font-family: 'IBM Plex Sans', Arial, sans-serif; font-size: 36px; line-height: 1.25 ; color: #ffffff; font-weight: 600;">Welcome to SellBuyPlay Community!</p>
                             </td>
                         </tr>
                         <tr>
-                            <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 10px 30px;">
+                            <td bgcolor="#ffffff" align="center" style="padding: 40px 30px 10px 30px;">
                                 <p style="font-family: 'IBM Plex Sans', Arial, sans-serif; color: #000000; font-size: 16px; font-weight: normal; line-height: 24px; margin: 0px;">Please click the link below to verify your email</p>
                             </td>
                         </tr>
